Final code for submission

--- a/Credit_Risk/credit_risk_classification_puch.ipynb
+++ b/Credit_Risk/credit_risk_classification_puch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.linear_model import LogisticRegression\n"
    ]
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +321,7 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
        "(58152, 7)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,22 +432,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18663   102]\n",
-      " [   56   563]]\n"
+      "Confusion Matrix\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>18663</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>563</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0        18663          102\n",
+       "Actual 1           56          563"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
     "test_matrix = confusion_matrix(y_test, testing_predictions)\n",
-    "print(test_matrix)"
+    "test_matrix_df = pd.DataFrame(\n",
+    "    test_matrix, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"]\n",
+    ")\n",
+    "print(\"Confusion Matrix\")\n",
+    "display(test_matrix_df)"
    ]
   },
   {
@@ -494,24 +547,7 @@
     "**Answer:** \n",
     "\n",
     "\n",
-    "The classification report provides several metrics to evaluate the performance of the logistic regression model for both the \"0\" (healthy loan) and \"1\" (high-risk loan) labels:\n",
-    "\n",
-    "Precision:\n",
-    "\n",
-    "Precision for label \"0\" (healthy loan) is 1.00, indicating that among all the instances predicted as \"0\", all are correctly classified.\n",
-    "Precision for label \"1\" (high-risk loan) is 0.85, indicating that among all the instances predicted as \"1\", 85% are correctly classified.\n",
-    "Recall (Sensitivity):\n",
-    "\n",
-    "Recall for label \"0\" is 0.99, suggesting that among all the actual instances of \"0\", 99% are correctly identified by the model.\n",
-    "Recall for label \"1\" is 0.91, indicating that among all the actual instances of \"1\", 91% are correctly identified by the model.\n",
-    "F1-score:\n",
-    "\n",
-    "F1-score for label \"0\" is 1.00, which is the harmonic mean of precision and recall for label \"0\".\n",
-    "F1-score for label \"1\" is 0.88, which is the harmonic mean of precision and recall for label \"1\".\n",
-    "Support:\n",
-    "\n",
-    "The support represents the number of actual occurrences of each class in the test set. For label \"0\", the support is 18765, and for label \"1\", it's 619.\n",
-    "Overall, the model seems to perform very well in predicting healthy loans (\"0\"), with high precision, recall, and F1-score. However, its performance on high-risk loans (\"1\") is slightly lower but still reasonable, with a slightly lower precision and recall. The macro-average and weighted-average values provide an overall summary of the model's performance across both classes, showing high accuracy and a balanced evaluation."
+    "The classification report provides several metrics to evaluate the performance of the logistic regression model for both the \"0\" (healthy loan) and \"1\" (high-risk loan). When we look at the report outcomes, we can see that the healthy loans have a very high precision of 1.00 and our high-risk loans have a precision of .85. Based on the classification report, we see that our model is really good at identifying safe loans (high precision and recall), but it's not as perfect at spotting risky loans. However, considering both types of loans, our model seems to be doing a decent job overall."
    ]
   },
   {
